feat(backend): Setup messaging service and basic room features